[package]
name = "cargo-make-rpm"
version = "1.0.0"
edition = "2021"
description = "A tool to generate rpm package from a rust project"
license = "MIT"
authors = ["MarkosTh09"]
repository = "https://github.com/Markos-Th09/cargo-make-rpm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.7.3"
rpm = "0.9.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
